fix: 엘라스틱서치 searchAfter 문제 해결